Added rate product route
